Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 6.3
-
Fix Version/s: 6.3.0 Alpha, 6.4.0 Beta1
-
Component/s: Connectivity: Bluetooth
-
Labels:None
-
Platform/s:
-
Story Points:5
-
Commits:95b1fab380 (qt/qtconnectivity/dev) dbc0a734ad (qt/qtconnectivity/6.3)
-
Sprint:Team 1 Foundation_Sprint 48, Team One Foundation Sprint 49
Description
The bluetooth adapter presence is checked at the qlowenergycontroller constructor time.
If the adapter is switched OFF, the controller will remain in "invalid adapter state".
This check for bluetooth adapter could be moved to start() function so it would check if every time when it is tried to start(), effectively then recovering if the user switches the bluetooth back ON.